--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Datasource
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = sa_rest
-quarkus.datasource.password = stranger
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/rest
+quarkus.datasource.username = postgres
+quarkus.datasource.password = katru2020
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/dev_java
 quarkus.hibernate-orm.database.generation=update
 
 # Flyway minimal config properties
