--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>2.7.5.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+    <lombok.version>1.18.22</lombok.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -70,10 +71,17 @@
 	    <groupId>io.quarkus</groupId>
 	    <artifactId>quarkus-jdbc-postgresql</artifactId>
 	</dependency>
+    <!-- Hibernate Validator -->
 	<dependency>
 	    <groupId>io.quarkus</groupId>
 	    <artifactId>quarkus-hibernate-validator</artifactId>
 	</dependency>
+    <!-- Lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
+    </dependency>
 	
   </dependencies>
   <build>
